poke/testsuite/poke.pkl/printf-diag-12.pk
/* { dg-do compile } */

printf "foo %ix bar", 10; /* { dg-error "" } */
